tempfile/async-stream/tests/ui/yield_in_closure.rs
use async_stream::stream;

fn main() {
    stream! {
        Ok("value")
            .and_then(|v| {
                yield v;
                Ok(())
            });
    };
}
